--- a/product.html
+++ b/product.html
@@ -22,27 +22,27 @@
             <summary class="header__summary-search">Browse</summary>
             <div class="dropdown__menu">
               <h3 class="dropdown__menu_heading">women</h3>
-              <a class="dropdown__menu_item" href="#">Dresses</a>
-              <a class="dropdown__menu_item" href="#">Tops</a>
-              <a class="dropdown__menu_item" href="#">Sweaters/Knits</a>
-              <a class="dropdown__menu_item" href="#">Jackets/Coats</a>
-              <a class="dropdown__menu_item" href="#">Blazers</a>
-              <a class="dropdown__menu_item" href="#">Denim</a>
-              <a class="dropdown__menu_item" href="#">Leggings/Pants</a>
-              <a class="dropdown__menu_item" href="#">Skirts/Shorts</a>
-              <a class="dropdown__menu_item" href="#">Accessories</a>
-              <a class="dropdown__menu_item" href="#">Bags/Purses</a>
-              <a class="dropdown__menu_item" href="#">Swimwear/Underwear</a>
-              <a class="dropdown__menu_item" href="#">Nightwear</a>
-              <a class="dropdown__menu_item" href="#">Shoes</a>
-              <a class="dropdown__menu_item" href="#">Beauty</a>
+              <a class="dropdown__menu_item" href="product.html">Dresses</a>
+              <a class="dropdown__menu_item" href="product.html">Tops</a>
+              <a class="dropdown__menu_item" href="product.html">Sweaters/Knits</a>
+              <a class="dropdown__menu_item" href="product.html">Jackets/Coats</a>
+              <a class="dropdown__menu_item" href="product.html">Blazers</a>
+              <a class="dropdown__menu_item" href="product.html">Denim</a>
+              <a class="dropdown__menu_item" href="product.html">Leggings/Pants</a>
+              <a class="dropdown__menu_item" href="product.html">Skirts/Shorts</a>
+              <a class="dropdown__menu_item" href="product.html">Accessories</a>
+              <a class="dropdown__menu_item" href="product.html">Bags/Purses</a>
+              <a class="dropdown__menu_item" href="product.html">Swimwear/Underwear</a>
+              <a class="dropdown__menu_item" href="product.html">Nightwear</a>
+              <a class="dropdown__menu_item" href="product.html">Shoes</a>
+              <a class="dropdown__menu_item" href="product.html">Beauty</a>
               <h3 class="dropdown__menu_heading">men</h3>
-              <a class="dropdown__menu_item" href="#">Tees/Tank tops</a>
-              <a class="dropdown__menu_item" href="#">Shirts/Polos</a>
-              <a class="dropdown__menu_item" href="#">Sweaters</a>
-              <a class="dropdown__menu_item" href="#">Sweatshirts/Hoodies</a>
-              <a class="dropdown__menu_item" href="#">Blazers</a>
-              <a class="dropdown__menu_item" href="#">Jackets/vests</a>
+              <a class="dropdown__menu_item" href="product.html">Tees/Tank tops</a>
+              <a class="dropdown__menu_item" href="product.html">Shirts/Polos</a>
+              <a class="dropdown__menu_item" href="product.html">Sweaters</a>
+              <a class="dropdown__menu_item" href="product.html">Sweatshirts/Hoodies</a>
+              <a class="dropdown__menu_item" href="product.html">Blazers</a>
+              <a class="dropdown__menu_item" href="product.html">Jackets/vests</a>
             </div>
           </details>
           <input class="header__text" type=search placeholder="Search for Item...">
@@ -295,166 +295,181 @@
                   <div class="control_indicator">
                   </div>
                 </label>
-
               </div>
             </div>
             <div class="product-promo__price_filter-price">
               <p class="product-promo__price_filter-paragraph">price</p>
               <input type="range" min="0" max="100" step="1" value="50">
-              <div class="product-promo__price_cent1">$52</div>
-              <div class="product-promo__price_cent2">$100</div>
+              <div class="product-promo__price_cent">
+                <p class="product-promo__price_cent1">$52</p>
+                <p class="product-promo__price_cent2">$400</p>
+              </div>
             </div>
             <div class="product-promo__price_sort">
-              <div class="product-promo__price_block">
+              <div class="product-promo__price_block1">
                 <p class="product-promo__price_paragraph-sort">Sort By</p>
                 <details class="product-promo__price_sortby">
                   <summary class="product-promo__price_summary1">Name</summary>
                 </details>
               </div>
-              <div class="product-promo__price_block">
+              <div class="product-promo__price_block2">
                 <p class="product-promo__price_paragraph-sort">Show</p>
                 <details class="product-promo__price_sortby">
                   <summary class="product-promo__price_summary2">09</summary>
                 </details>
               </div>
-
             </div>
           </div>
-
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card9.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt</p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
+          <div class="product-promo__cards">
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card9.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
               </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
+            </div>
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card10.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
+            </div>
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card3.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
+            </div>
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card3.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
+            </div>
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card1.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
+            </div>
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card8.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
+            </div>
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card7.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
+            </div>
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card6.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt</p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
+            </div>
+            <div class="cards__item">
+              <a class="cards__link" href="product.html">
+                <img class="cards__img" src="./build/img/card13.png" alt="card">
+                <div class="cards__price">
+                  <p class="cards__text">Mango People T-shirt
+                  </p>
+                  <p class="cards__text__red">$50.00</p>
+                </div>
+              </a>
+              <div class="cards__add">
+                <a class="cards__add__link" href="#">
+                  <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                  <p class="cards__add__text">Add to Cart</p>
+                </a>
+              </div>
             </div>
           </div>
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card10.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt</p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
-              </a>
+          <div class="product-promo__down-menu">
+            <div class="product-promo__down-menu_left">
+              <a href="#" class="product-promo__button-number"></a>
+              <a href="#" class="product-promo__button-number">1</a>
+              <a href="#" class="product-promo__button-number">2</a>
+              <a href="#" class="product-promo__button-number">3</a>
+              <a href="#" class="product-promo__button-number">4</a>
+              <a href="#" class="product-promo__button-number">5</a>
+              <a href="#" class="product-promo__button-number">6</a>
             </div>
-          </div>
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card3.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt</p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
-              </a>
-            </div>
-          </div>
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card3.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt</p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
-              </a>
-            </div>
-          </div>
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card1.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt</p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
-              </a>
-            </div>
-          </div>
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card8.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt</p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
-              </a>
-            </div>
-          </div>
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card7.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt</p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
-              </a>
-            </div>
-          </div>
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card6.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt</p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
-              </a>
-            </div>
-          </div>
-          <div class="cards__item">
-            <a class="cards__link" href="product.html">
-              <img class="cards__img" src="./build/img/card13.png" alt="card">
-              <div class="cards__price">
-                <p class="cards__text">Mango People T-shirt
-                </p>
-                <p class="cards__text__red">$50.00</p>
-              </div>
-            </a>
-            <div class="cards__add">
-              <a class="cards__add__link" href="#">
-                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                <p class="cards__add__text">Add to Cart</p>
-              </a>
+            <div class="product-promo__down-menu_right">
+              <button class="product-promo__down-menu_button">View All</button>
             </div>
           </div>
         </div>
