--- a/product.html
+++ b/product.html
@@ -299,8 +299,9 @@
             </div>
             <div class="product-promo__price_filter-price">
               <p class="product-promo__price_filter-paragraph">price</p>
-              <input type="range" min="0" max="100" step="1" value="50">
               <div class="product-promo__price_cent">
+                <input class="product-promo__price_cent-input" type="range" min="0" max="100" step="1" value="50">
+
                 <p class="product-promo__price_cent1">$52</p>
                 <p class="product-promo__price_cent2">$400</p>
               </div>
@@ -460,13 +461,15 @@
           </div>
           <div class="product-promo__down-menu">
             <div class="product-promo__down-menu_left">
-              <a href="#" class="product-promo__button-number"></a>
-              <a href="#" class="product-promo__button-number">1</a>
-              <a href="#" class="product-promo__button-number">2</a>
-              <a href="#" class="product-promo__button-number">3</a>
-              <a href="#" class="product-promo__button-number">4</a>
-              <a href="#" class="product-promo__button-number">5</a>
-              <a href="#" class="product-promo__button-number">6</a>
+              <a href="#" class="product-promo__down-menu_button-number">
+                <</a> <a href="#" class="product-promo__down-menu_button-number">1
+              </a>
+              <a href="#" class="product-promo__down-menu_button-number">2</a>
+              <a href="#" class="product-promo__down-menu_button-number">3</a>
+              <a href="#" class="product-promo__down-menu_button-number">4</a>
+              <a href="#" class="product-promo__down-menu_button-number">5</a>
+              <a href="#" class="product-promo__down-menu_button-number">6.....20</a>
+              <a href="#" class="product-promo__down-menu_button-number">></a>
             </div>
             <div class="product-promo__down-menu_right">
               <button class="product-promo__down-menu_button">View All</button>
