--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         </div>
                     </a>
                     <div class="cards__add">
-                        <a class="cards__add__link" href="#">
+                        <a class="cards__add__link" href="shoppingcart.html">
                             <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
                             <p class="cards__add__text">Add to Cart</p>
                         </a>
@@ -253,7 +253,7 @@
                         </div>
                     </a>
                     <div class="cards__add">
-                        <a class="cards__add__link" href="#">
+                        <a class="cards__add__link" href="shoppingcart.html">
                             <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
                             <p class="cards__add__text">Add to Cart</p>
                         </a>
@@ -268,7 +268,7 @@
                         </div>
                     </a>
                     <div class="cards__add">
-                        <a class="cards__add__link" href="#">
+                        <a class="cards__add__link" href="shoppingcart.html">
                             <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
                             <p class="cards__add__text">Add to Cart</p>
                         </a>
@@ -283,7 +283,7 @@
                         </div>
                     </a>
                     <div class="cards__add">
-                        <a class="cards__add__link" href="#">
+                        <a class="cards__add__link" href="shoppingcart.html">
                             <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
                             <p class="cards__add__text">Add to Cart</p>
                         </a>
@@ -298,7 +298,7 @@
                         </div>
                     </a>
                     <div class="cards__add">
-                        <a class="cards__add__link" href="#">
+                        <a class="cards__add__link" href="shoppingcart.html">
                             <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
                             <p class="cards__add__text">Add to Cart</p>
                         </a>
@@ -313,7 +313,7 @@
                         </div>
                     </a>
                     <div class="cards__add">
-                        <a class="cards__add__link" href="#">
+                        <a class="cards__add__link" href="shoppingcart.html">
                             <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
                             <p class="cards__add__text">Add to Cart</p>
                         </a>
@@ -328,7 +328,7 @@
                         </div>
                     </a>
                     <div class="cards__add">
-                        <a class="cards__add__link" href="#">
+                        <a class="cards__add__link" href="shoppingcart.html">
                             <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
                             <p class="cards__add__text">Add to Cart</p>
                         </a>
@@ -343,7 +343,7 @@
                         </div>
                     </a>
                     <div class="cards__add">
-                        <a class="cards__add__link" href="#">
+                        <a class="cards__add__link" href="shoppingcart.html">
                             <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
                             <p class="cards__add__text">Add to Cart</p>
                         </a>
