--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -213,8 +213,10 @@
       <div class="shop-cart__product_details1">
         <img class="shop-cart__product_details-img" src="./build/img/card_mini1.png" alt="cardmini">
         <p class="shop-cart__product_details-desc1 shop-cart__product_details-head1">Mango People T-shirt</p>
-        <p class="shop-cart__product_details-desc2 shop-cart__product_details-head">Color: Red</p>
-        <p class="shop-cart__product_details-desc3 shop-cart__product_details-head">Size: Xll</p>
+        <p class="shop-cart__product_details-desc2"><span class="shop-cart__product_details-head">Color:</span>&nbspRed
+        </p>
+        <p class="shop-cart__product_details-desc3"><span class="shop-cart__product_details-head">Size:</span>&nbspXll
+        </p>
         <p class="shop-cart__product_details-desc4 shop-cart__product_details-font">$150</p>
         <p class="shop-cart__product_details-desc5 shop-cart__product_details-font">2</p>
         <p class="shop-cart__product_details-desc6 shop-cart__product_details-font">FREE</p>
@@ -224,8 +226,10 @@
       <div class="shop-cart__product_details1">
         <img class="shop-cart__product_details-img" src="./build/img/card_mini2.png" alt="cardmini">
         <p class="shop-cart__product_details-desc1 shop-cart__product_details-head1">Mango People T-shirt</p>
-        <p class="shop-cart__product_details-desc2 shop-cart__product_details-head">Color: Red</p>
-        <p class="shop-cart__product_details-desc3 shop-cart__product_details-head">Size: Xll</p>
+        <p class="shop-cart__product_details-desc2"><span class="shop-cart__product_details-head">Color:</span>&nbspRed
+        </p>
+        <p class="shop-cart__product_details-desc3"><span class="shop-cart__product_details-head">Size:</span>&nbspXll
+        </p>
         <p class="shop-cart__product_details-desc4 shop-cart__product_details-font">$150</p>
         <p class="shop-cart__product_details-desc5 shop-cart__product_details-font">2</p>
         <p class="shop-cart__product_details-desc6 shop-cart__product_details-font">FREE</p>
@@ -235,8 +239,10 @@
       <div class="shop-cart__product_details1">
         <img class="shop-cart__product_details-img" src="./build/img/card_mini3.png" alt="cardmini">
         <p class="shop-cart__product_details-desc1 shop-cart__product_details-head1">Mango People T-shirt</p>
-        <p class="shop-cart__product_details-desc2 shop-cart__product_details-head">Color: Red</p>
-        <p class="shop-cart__product_details-desc3 shop-cart__product_details-head">Size: Xll</p>
+        <p class="shop-cart__product_details-desc2"><span class="shop-cart__product_details-head">Color:</span>&nbspRed
+        </p>
+        <p class="shop-cart__product_details-desc3"><span class="shop-cart__product_details-head">Size:</span>&nbspXll
+        </p>
         <p class="shop-cart__product_details-desc4 shop-cart__product_details-font">$150</p>
         <p class="shop-cart__product_details-desc5 shop-cart__product_details-font">2</p>
         <p class="shop-cart__product_details-desc6 shop-cart__product_details-font">FREE</p>
@@ -479,21 +485,31 @@
             </select>
             <div class="shop-cart__product_form-arrow"></div>
           </div>
-
-          <input id="zip" name="zip" type="text" pattern="" placeholder="State">
-          <input id="zip" name="zip" type="text" pattern="[0-9]*" placeholder="Postcode / Zip">
+          <input class="shop-cart__product_form-input" name="zip" type="text" placeholder="State">
+          <input class="shop-cart__product_form-input" name="zip" type="text" pattern="[0-9]*"
+            placeholder="Postcode / Zip">
           <button class="shop-cart__product_form-button">get a quote</button>
         </form>
         <div class="shop-cart__product_form-center">
-          <p class="shop-cart__product_adress">spipping adress</p>
-          <p class="shop-cart__product_adress">spipping adress</p>
-          <input id="zip" name="zip" type="text" pattern="">
-          <button>sdfs</button>
+          <p class="shop-cart__product_adress">coupon discount</p>
+          <p class="shop-cart__product_adress-little">Enter your coupon code if you have one</p>
+          <input class="shop-cart__product_form-input" name="zip" type="text" placeholder="State">
+          <button class="shop-cart__product_form-button shop-cart__product_form-button-size">Apply coupon</button>
         </div>
-        <div class="shop-cart__product_form-right"></div>
-
+        <div class="shop-cart__product_form-right">
+          <div class="shop-cart__product_form-right-content">
+            <div class="shop-cart__product_form-right-text">
+              <p class="shop-cart__product_form-right-sub">sub total</p>
+              <p class="shop-cart__product_form-right-sub1">$900</p>
+            </div>
+            <div class="shop-cart__product_form-right-text1">
+              <p class="shop-cart__product_form-right-grand">grand total</p>
+              <p class="shop-cart__product_form-right-grand shop-cart__product_form-right-grand1">$900</p>
+            </div>
+            <button class="shop-cart__product_form-right-button">proceed to checkout</button>
+          </div>
+        </div>
       </div>
-
     </div>
   </section>
 
