--- a/single.html
+++ b/single.html
@@ -198,6 +198,57 @@
     </div>
   </div>
 
+  <section class="single">
+    <div class="single__content">
+      <div class="single__content_btn">
+        <button class="single__content_btn-left">
+          <</button> <button class="single__content_btn-right">>
+        </button>
+      </div>
+
+    </div>
+  </section>
+  <section class="container single__content_collection">
+    <div class="single__content_collection-text">
+      <p class="single__content_collection-top">women collection</p>
+      <div class="single__content_collection-border"></div>
+      <p class="single__content_collection-head">moschino cheap and chic</p>
+      <p class="single__content_collection-actualize">Compellingly actualize fully researched processes before proactive
+        outsourcing. Progressively
+        syndicate collaborative
+        architectures before cutting-edge services. Completely visualize parallel core competencies rather than
+        exceptional
+        portals.</p>
+      <div class="single__content_collection-material">
+        <p>material:<span class="single__content_collection-span">&nbsp cotton</span></p>
+        <p>designer:<span class="single__content_collection-span">&nbsp binburhan</span></p>
+      </div>
+      <p class="single__content_collection-price">$561</p>
+      <div class="single__content_choice">
+        <div class="single__content_choice1">
+          <p class="single__content_choice-color">choose color</p>
+          <select name="" id="">
+            <option value="">Red</option>
+            <option value="">Black</option>
+            <option value="">Green</option>
+          </select>
+        </div>
+        <div class="single__content_choice2">
+          <p class="single__content_choice-size">choose size</p>
+          <select name="" id="">
+            <option value="">L</option>
+            <option value="">XL</option>
+            <option selected value="">XXL</option>
+          </select>
+        </div>
+        <div class="single__content_choice3">
+          <p class="single__content_choice-quantity">quantity</p>
+          <input type="text" placeholder="2" ß>
+        </div>
+        <button class="single__content_choice-button">Add to Cart</button>
+      </div>
+    </div>
+  </section>
   <section class="feedback">
     <div class="container feedback__item">
       <figure class="feedback__left">
