--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </form>
             </div>
             <div class="header__right">
-                <a class="basket" href="#"><img src="./build/img/basket.png" alt="basket"></a>
+                <a class="basket" href="shoppingcart.html"><img src="./build/img/basket.png" alt="basket"></a>
                 <details class="button__logo">
                     <summary class="summary__basket">My Account</summary>
                 </details>
@@ -350,16 +350,12 @@
                     </div>
                 </div>
             </div>
+            <div class="cards__button-product">
+                <button class="cards__button-product_text">Browse All Product</button>
+            </div>
         </div>
     </section>
 
-    <div class="container button__product">
-        <button class="button__product__text">
-            <details>
-                <summary class="button__product__sum">Browse All Product</summary>
-            </details>
-        </button>
-    </div>
 
     <section class="bigbanner">
         <div class="container bigbanner__item">
